crates/graphql-orm/tests/ui/retention_wrong_entity.stderr
error[E0277]: the trait bound `OrdinaryEvent: RetentionPurge` is not satisfied
  --> tests/ui/retention_wrong_entity.rs:18:22
   |
18 |                     .purge::<OrdinaryEvent>(
   |                      ^^^^^ unsatisfied trait bound
   |
help: the trait `RetentionPurge` is not implemented for `OrdinaryEvent`
  --> tests/ui/retention_wrong_entity.rs:5:1
   |
 5 | struct OrdinaryEvent {
   | ^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `OrdinaryEvent: RetentionPurge` is not satisfied
  --> tests/ui/retention_wrong_entity.rs:17:17
   |
17 | /                 maintenance
18 | |                     .purge::<OrdinaryEvent>(
19 | |                         OrdinaryEventWhereInput::default(),
20 | |                         MutationLimit::new(1)?,
21 | |                     )
   | |_____________________^ unsatisfied trait bound
   |
help: the trait `RetentionPurge` is not implemented for `OrdinaryEvent`
  --> tests/ui/retention_wrong_entity.rs:5:1
   |
 5 | struct OrdinaryEvent {
   | ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `RetentionContext::<'tx, B>::purge`
  --> src/graphql/orm/core.rs
   |
   |     pub async fn purge<T>(
   |                  ----- required by a bound in this associated function
...
   |         T: RetentionPurge<B>,
   |            ^^^^^^^^^^^^^^^^^ required by this bound in `RetentionContext::<'tx, B>::purge`

error[E0277]: the trait bound `OrdinaryEvent: RetentionPurge` is not satisfied
  --> tests/ui/retention_wrong_entity.rs:22:22
   |
22 |                     .await
   |                      ^^^^^ unsatisfied trait bound
   |
help: the trait `RetentionPurge` is not implemented for `OrdinaryEvent`
  --> tests/ui/retention_wrong_entity.rs:5:1
   |
 5 | struct OrdinaryEvent {
   | ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `RetentionContext::<'tx, B>::purge`
  --> src/graphql/orm/core.rs
   |
   |     pub async fn purge<T>(
   |                  ----- required by a bound in this associated function
...
   |         T: RetentionPurge<B>,
   |            ^^^^^^^^^^^^^^^^^ required by this bound in `RetentionContext::<'tx, B>::purge`
